reduce spacing in header between DfE & service name (reintroduces responsiveness issues, but no-one cares about them)

--- a/src/FamilyHubs.RequestForSupport.Web/styles/scss/_global.scss
+++ b/src/FamilyHubs.RequestForSupport.Web/styles/scss/_global.scss
@@ -38,6 +38,10 @@
         @include govuk-responsive-margin(2, "right");
     }
 
+    .govuk-header__link--homepage { 
+        margin-right: 0;
+    }
+
     .govuk-header__logotype-text, .govuk-header__product-name {
         line-height: 2.5rem !important;
         font-size: 1.2rem;
